<resources>
    <string name="app_name">Validyne Engineering</string>
    <string name="main_text">Please pick a device to connect to from the list below</string>
    <string name="connect">Connect</string>
    <string name="title_pressure">Pressure</string>
    <string name="model_number">Model</string>
    <string name="serial_number">Serial #</string>
    <string name="max_psi">Full Scale</string>
    <string name="temperature">Temperature</string>
    <string name="last_calibrated">Last Calibrated</string>
    <string name="calibrate">Calibrate</string>
    <string name="title_calibration">Calibration</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="span">Auto Span</string>
    <string name="zero">Auto Zero</string>
    <string name="restore">Restore Post Calibration</string>
    <string name="action_refresh">Refresh</string>
    <string name="settings_menu">Settings</string>
    <string name="loading">Please wait as we connect and load values &#8230;</string>
    <string name="numzero">0</string>
    <string name="settings_title">Transducer Output Settings</string>
    <string name="default_pressure_unit">psi</string>
    <string name="temperature_settings_title">Displayed Temperature Units</string>
    <string name="temperature_settings_summary">Press the toggle to display Celsius otherwise toggle off for Fahrenheit</string>
    <string name="pressure_dialog_title">Pressure Unit Selector</string>
    <string name="pressure_settings_title">Displayed Pressure Units</string>
    <string name="pressure_settings_summary">Press here to select the preferred pressure units of measurement to be displayed</string>
    <string name="temperatureType">com.validyne.blutransducer.temperatureType</string>
    <string name="pressureType">com.validyne.blutransducer.pressureType</string>
    <string name="firstStart">com.validyne.blutransducer.firstStart</string>
    <string name="calibration_dialog_title">Calibration Error</string>
    <string name="plus_error">Error with the plus button</string>
    <string name="minus_error">Error with the minus button</string>
    <string name="span_error">Error with the set span button &#8230;</string>
    <string name="zero_error">Error with the set zero button &#8230;</string>
    <string name="please_wait">Please wait &#8230;</string>
</resources>
