<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pressure"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.validyne.blutransducer.Pressure">

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/textView"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:text="@string/model_number" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:text="@string/serial_number" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:text="@string/max_psi" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:text="@string/temperature" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:text="@string/last_calibrated" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/model_number"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/serial_number"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:layout_below="@+id/model_number"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/max_pressure"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:layout_below="@+id/serial_number"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/temperature"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:layout_below="@+id/last_calibrated"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_calibrated"
        android:textColor="@color/text"
        android:textSize="@dimen/text"
        android:layout_below="@+id/max_pressure"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <pl.pawelkleczkowski.customgauge.CustomGauge
        android:visibility="gone"
        android:id="@+id/gauge"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        app:gaugePointStartColor="@color/startpoint"
        app:gaugePointEndColor="@color/startpoint"
        app:gaugePointSize="6"
        app:gaugeStartAngle="135"
        app:gaugeStrokeCap="ROUND"
        app:gaugeStrokeColor="@color/gauge_background"
        app:gaugeStrokeWidth="15dp"
        app:gaugeStartValue="0"
        app:gaugeEndValue="100"
        app:gaugeSweepAngle="270"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gauge"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="150dp"
        android:text="@string/numzero"
        android:textSize="18sp"
        android:textColor="@color/text"
        android:id="@+id/zero" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:lines="2"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:id="@+id/gaugeText" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gauge"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="115dp"
        android:text="@string/minus"
        android:textSize="@dimen/text"
        android:textColor="@color/text"
        android:id="@+id/minus" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gauge"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="205dp"
        android:text="@string/plus"
        android:textSize="@dimen/text"
        android:textColor="@color/text"
        android:id="@+id/plus" />

    <Button
        android:visibility="gone"
        android:text="@string/calibrate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttons"
        android:textSize="@dimen/button_text"
        android:layout_marginStart="@dimen/button_connect_margin"
        android:layout_marginLeft="@dimen/button_connect_margin"
        android:id="@+id/button" />

    <TextView
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loading"
        android:text="@string/loading"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/text"
        android:textColor="@color/text" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress" >
    </ProgressBar>
</RelativeLayout>
