<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calibration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.validyne.blutransducer.Pressure">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"
        android:indeterminateDrawable="@drawable/progress" >
    </ProgressBar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pressure"
        android:textSize="@dimen/heading_text"
        android:textColor="@color/text"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/restore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_restore"
        android:background="@drawable/buttons"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/button_connect_margin"
        android:layout_marginLeft="@dimen/button_connect_margin"
        android:textSize="@dimen/button_text" />

    <Button
        android:text="@string/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_plus"
        android:textSize="@dimen/button_text"
        android:textStyle="bold"
        android:background="@drawable/buttons"
        android:layout_marginTop="@dimen/btn_margin_plusminus"
        android:layout_below="@id/pressure"
        android:layout_marginStart="@dimen/btn_LR_margin"
        android:layout_marginLeft="@dimen/btn_LR_margin"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <Button
        android:text="@string/span"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_span"
        android:background="@drawable/buttons"
        android:layout_below="@+id/btn_minus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/btn_margin"
        android:textSize="@dimen/button_text"
        android:paddingLeft="@dimen/btn_padding"
        android:paddingRight="@dimen/btn_padding" />

    <Button
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_zero"
        android:background="@drawable/buttons"
        android:textSize="@dimen/button_text"
        android:paddingLeft="@dimen/btn_padding"
        android:paddingRight="@dimen/btn_padding"
        android:layout_alignStart="@+id/btn_span"
        android:layout_alignLeft="@id/btn_span"
        android:layout_marginTop="@dimen/btn_margin"
        android:layout_below="@+id/btn_span" />

    <Button
        android:text="@string/minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_minus"
        android:textSize="@dimen/button_text"
        android:textStyle="bold"
        android:background="@drawable/buttons"
        android:layout_marginEnd="@dimen/btn_LR_margin"
        android:layout_marginRight="@dimen/btn_LR_margin"
        android:layout_alignBaseline="@+id/btn_plus"
        android:layout_alignBottom="@+id/btn_plus"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignEnd="@+id/btn_restore"
        android:layout_alignRight="@+id/btn_restore" />
</RelativeLayout>
